# github-mcp-server-wheel

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: release.yaml
src/: github_mcp_server.py  test_github_mcp_server.py
